# glance

./: .gitignore  Cargo.toml  README.md
bundle/: Glance.icns  Info.plist
scripts/: bundle.sh  make_icon.sh
src/: main.rs
src/app/: delegate.rs  hotkey.rs  login_item.rs  mod.rs  shared.rs
src/core/: app_index.rs  config.rs  file_index.rs  item.rs  live_index.rs  mod.rs  search.rs
src/plugins/: app_launcher.rs  calculator.rs  calendar.rs  file_search.rs  lua_host.rs  mod.rs  system.rs  timer.rs  web_search.rs
src/ui/: controller.rs  mod.rs  panel.rs  result_row.rs  settings.rs
