[package]
name = "glance"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSGeometry",
    "NSObject",
    "NSNotification",
    "NSTimer",
    "NSArray",
    "NSURL",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSPanel",
    "NSView",
    "NSControl",
    "NSTextField",
    "NSTextView",
    "NSText",
    "NSScreen",
    "NSColor",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSImageCell",
    "NSWorkspace",
    "NSGraphics",
    "NSRunningApplication",
] }
global-hotkey = "0.8"
nucleo = "0.5"
