[package]
name = "glance"
version = "0.1.0"
edition = "2021"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSGeometry",
    "NSObject",
    "NSNotification",
    "NSTimer",
    "NSArray",
    "NSURL",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSPanel",
    "NSView",
    "NSControl",
    "NSButton",
    "NSTextField",
    "NSTextView",
    "NSText",
    "NSScreen",
    "NSColor",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSImageCell",
    "NSWorkspace",
    "NSOpenPanel",
    "NSSavePanel",
    "NSGraphics",
    "NSRunningApplication",
] }
global-hotkey = "0.8"
nucleo = "0.5"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
