[package]
name = "glance"
version = "0.1.0"
edition = "2021"
description = "A fast, native, minimal launcher for macOS"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["macos", "launcher", "spotlight", "productivity", "appkit"]
categories = ["gui", "os::macos-apis"]
publish = false
repository = "https://github.com/norepository/glance"

[dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSGeometry",
    "NSObject",
    "NSNotification",
    "NSTimer",
    "NSArray",
    "NSURL",
    "NSDate",
    "NSDateFormatter",
    "NSPredicate",
    "NSError",
] }
objc2-event-kit = { version = "0.3", features = [
    "EKEventStore",
    "EKEvent",
    "EKCalendarItem",
    "EKCalendar",
    "EKTypes",
] }
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSPanel",
    "NSView",
    "NSControl",
    "NSButton",
    "NSTextField",
    "NSTextView",
    "NSText",
    "NSScreen",
    "NSColor",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSImageCell",
    "NSWorkspace",
    "NSOpenPanel",
    "NSSavePanel",
    "NSPasteboard",
    "NSVisualEffectView",
    "NSEvent",
    "NSStepper",
    "NSGraphics",
    "NSRunningApplication",
] }
objc2-quartz-core = { version = "0.3", features = ["CALayer"] }
objc2-service-management = { version = "0.3", features = ["SMAppService"] }
global-hotkey = "0.8"
nucleo = "0.5"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fend-core = "1"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
notify = "8"
